--- a/deployment.yml
+++ b/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: kiran63/ultimate-cicd:1
+        image: osmanshaikh/spring-boot-app:1
         ports:
         - containerPort: 8080
